--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "cz.honzamrazek.sensorstreamer"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         multiDexEnabled true
-        versionCode 1
-        versionName "1.0"
+        versionCode 10100
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
